# ebook-converter

./: .gitignore  Cargo.toml  README.md
ai-docs/: plan-1.md  project-ideas.ai
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_test.rs
crates/core/: Cargo.toml
crates/core/src/: accessibility.rs  config.rs  convert.rs  cover.rs  dedup.rs  detect.rs  document.rs  encoding.rs  error.rs  lib.rs  library.rs  lookup.rs  merge.rs  meta.rs  optimize.rs  progress.rs  rename.rs  repair.rs  security.rs  split.rs  stats.rs  transform.rs  validate.rs  watch.rs
crates/core/src/lookup/: openlibrary.rs
crates/core/src/readers/: epub.rs  mod.rs  txt.rs
crates/core/src/writers/: epub.rs  mod.rs  txt.rs
crates/ffi/: Cargo.toml  cbindgen.toml
crates/ffi/src/: lib.rs
crates/library-server/: Cargo.toml  README.md
crates/library-server/src/: api.rs  config.rs  lib.rs  main.rs  storage.rs
crates/library-server/tests/: api_test.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: PROJECT-TODO-AND-IMPROVEMENTS.md  TODO-AND-IMPROVEMENTS.md  library-standard.md
include/: ebook_converter.h
tests/fixtures/epub2/: minimal.epub
