[package]
name = "ebook-converter-core"
description = "Core library for ebook format conversion, validation, and repair"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# EPUB / ZIP / XML
zip.workspace = true
quick-xml.workspace = true

# HTML parsing
html5ever.workspace = true
scraper.workspace = true

# Markdown
pulldown-cmark.workspace = true

# Image processing
image.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# HTTP client (for metadata lookup)
reqwest.workspace = true
tokio.workspace = true

# Config / directories
dirs.workspace = true

# File watching
notify.workspace = true

# Hashing
sha2.workspace = true

# Unicode
unicode-normalization.workspace = true
unicode-segmentation.workspace = true

# Fuzzy matching
strsim.workspace = true

# JSON path (for custom provider field mapping)
serde_json_path.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
wiremock.workspace = true
