[package]
name = "ebook-converter-ffi"
description = "C-ABI FFI bindings for ebook-converter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ebook-converter-core.workspace = true
