[package]
name = "ebook-converter-library-server"
version.workspace = true
edition.workspace = true
description = "HTTP server implementing the ebook library standard for website integration"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "library-server"
path = "src/main.rs"

[dependencies]
ebook-converter-core.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
percent-encoding = "2"
dirs = "6"
bytes = "1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
